# Formal-language

./: README.md
Practice 1/: CMakeLists.txt  Launcher  README.md  main.cpp  tests.cpp
Practice 2/: CMakeLists.txt  README.md  main.cpp  tests.cpp
